2004-11-13 00:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Added GModelMenuTemplate to allow decoding
	of .gmodels which contain the menu template class.
	* GormClassManager.m: Changed the allClassNames method to not prepend
	NSObject now that NSObject is part of the classInformation plist.
	* GormFunctions.[hm]: Added parameter to pass in the current list of
	classes from the calling document.
	* GormClassPanelController.[hm]: New class.
	* GormClassPanel.gorm: Added interface.
	
2004-11-12 17:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Changes to improve loading of .gmodel files.
	* GormClassManager.[hm]: Changed name of setCustomClass:forObject:
	to setCustomClass:forName: and also removeCustomClassforObject: to
	removeCustomClassForName:
	* GormCustomClassInspector.m: Changes to accomodate the new method
	name.
	* GormDocument.m: Changes to accomodate the new method name.
	* GormFilesOwner.m: Corrected an issue with changing the class
	for the file's owner.   Added code which checks both the actions
	and outlets attached to see if it's necessary to prompt before
	destroying connections.
	
2004-11-09 09:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSStepperInspector.gorm: Changed
	some of the titles and made the layout more consistent with
	other inspectors.
	
2004-11-09 08:55 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Modified the code in the table delegate
	to use the NSTableView * to determine which table is calling
	the delegate instead of which tab is currently selected.
	
2004-11-07 22:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added code to [GormClassManager 
	loadCustomClasses:] to ignore any entry in the data.classes file
	which is not a dictionary.
	
2004-11-07 22:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added code to [GormClassManager saveToFile:]